--- a/vep/Dockerfile
+++ b/vep/Dockerfile
@@ -8,6 +8,7 @@ RUN conda install -c conda-forge conda-pack && \
     ensembl-vep=108.2 \
     snakemake-wrapper-utils=0.5.0 \
     perl-bio-db-hts=2.7 \
+    openssl=1.1.1a
     perl=5.32.1
 
 # Use conda-pack to create a standalone enviornment
