--- a/vep/Dockerfile
+++ b/vep/Dockerfile
@@ -4,7 +4,7 @@ FROM continuumio/miniconda3:22.11.1 AS build
 # Install conda-pack:
 RUN conda install -c conda-forge conda-pack && \
     conda create --name hydra -c bioconda \
-    openssl=1.1.1t \
+    openssl=1.1.1q \
     bcftools=1.16 \
     ensembl-vep=108.2 \
     snakemake-wrapper-utils=0.5.0 
