--- a/upd/Dockerfile
+++ b/upd/Dockerfile
@@ -1,17 +1,23 @@
+# The build-stage image:
 FROM continuumio/miniconda3:4.10.3 AS builder
 
 # Install conda-pack:
-RUN conda config --set channel_priority strict && \
-    conda install -c conda-forge conda-pack && \
+RUN conda install -c conda-forge conda-pack && \
     conda create --name hydra -c conda-forge -c bioconda -c defaults \
     click=8.0.4 \
     coloredlogs=15.0.1 \
-    conda-pack -n hydra -o /tmp/env.tar
 
+# Use conda-pack to create a standalone enviornment in /venv:
+RUN conda-pack -n hydra -o /tmp/env.tar
 WORKDIR /venv
+RUN tar xf /tmp/env.tar
 
-RUN tar xf /tmp/env.tar && \
-    /venv/bin/conda-unpack
+# We've put venv in same path it'll be in final image, fix up paths:
+RUN /venv/bin/conda-unpack
+
+# The runtime-stage image; we can use Debian as the base
+# image since the Conda env also includes Python for us.
+FROM debian:buster-slim AS runtime
 
 
 ################## METADATA ######################
@@ -21,7 +27,6 @@ LABEL version=0.1.1
 LABEL click=8.0.4
 LABEL coloredlogs=15.0.1
 
-
 RUN apt-get update \
   && apt-get install --no-install-recommends -y git=1:2.39.1-0.1 ca-certificates=20211016 curl=7.87.0-2 \
   && update-ca-certificates \
@@ -30,6 +35,8 @@ RUN apt-get update \
   git clone  https://github.com/bjhall/upd /upd && \
   pip install --no-cache-dir --editable upd && \
   rm -r /usr/local/man
+
+COPY --from=build /venv  /usr/local/
 
 WORKDIR /upd
 
