feat: upd image 0.1.1

--- a/upd/Dockerfile
+++ b/upd/Dockerfile
@@ -6,13 +6,7 @@ RUN conda config --set channel_priority strict && \
     conda install -c conda-forge conda-pack && \
     conda create --name hydra -c conda-forge -c bioconda -c defaults \
     click=8.0.4 \
-    coloredlogs=15.0.1 && \
-    conda-pack -n hydra -o /tmp/env.tar
-
-WORKDIR /venv
-
-RUN tar xf /tmp/env.tar && \
-    /venv/bin/conda-unpack
+    coloredlogs=15.0.1
 
 ################## METADATA ######################
 LABEL maintainer="jessika.nordin@scilifelab.uu.se"
@@ -23,17 +17,19 @@ LABEL coloredlogs=15.0.1
 
 FROM ubuntu:22.10
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update \
   && apt-get install --no-install-recommends -y git=1:2.37.2-1ubuntu1.4 ca-certificates=20211016 curl=7.85.0-1ubuntu0.3 \
   && update-ca-certificates \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* && \
-  git clone https://github.com/bjhall/upd.git /upd && \
-  rm -r /usr/local/man
+  git clone https://github.com/bjhall/upd.git /upd
 
 WORKDIR /upd
 
-RUN python3 -m venv /venv && \
-    pip install --no-cache-dir --editable upd
+ENV PATH="/venv/bin/:${PATH}:/upd"
 
-ENV PATH="${PATH}:/upd"
+RUN python3 -m venv /venv && \
+    # && . /venv/bin/activate \
+    pip install --no-cache-dir --editable upd
