--- a/upd/Dockerfile
+++ b/upd/Dockerfile
@@ -20,7 +20,7 @@ FROM ubuntu:22.10
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update \
-  && apt-get install --no-install-recommends -y git=1:2.37.2-1ubuntu1.4 ca-certificates=20211016 curl=7.85.0-1ubuntu0.3 \
+  && apt-get install --no-install-recommends -y git=1:2.37.2-1ubuntu1.4 ca-certificates=20211016 curl=7.85.0-1ubuntu0.3 python3.10-venv=3.10.7-1ubuntu0.2 python3.10-dev=3.10.7-1ubuntu0.2 python3-pip=22.2+dfsg-1ubuntu0.2 \
   && update-ca-certificates \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* && \
