--- a/hap.py/Dockerfile
+++ b/hap.py/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:18.04
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
-    apt-get install -y \
+    apt-get install --no-install-recommends -y \
         autoconf=2.69-11 \
         build-essential=12.4ubuntu1 \
         bzip2=1.0.6-8.1ubuntu0.2 \
@@ -28,13 +28,14 @@ RUN apt-get update && \
         software-properties-common=0.96.24.32.20 \
         wget=1.19.4-1ubuntu2.2 \
         zlib1g-dev=1:1.2.11.dfsg-0ubuntu2.2 && \
-    apt-get clean -y
+    apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN pip install bx-python==0.8.9
+RUN pip install --no-cache-dir bx-python==0.8.9
 
 # copy git repository into the image
-RUN mkdir -p /opt/hap.py-source
-RUN wget https://github.com/Illumina/hap.py/archive/refs/tags/v0.3.15.tar.gz && \
+RUN mkdir -p /opt/hap.py-source && \
+    wget -nv https://github.com/Illumina/hap.py/archive/refs/tags/v0.3.15.tar.gz && \
     tar -xvf v0.3.15.tar.gz && \
     mv hap.py-0.3.15/* /opt/hap.py-source/
 
@@ -46,7 +47,7 @@ WORKDIR /opt/hap.py-data
 
 # get + install ant
 WORKDIR /opt
-RUN wget http://archive.apache.org/dist/ant/binaries/apache-ant-1.9.7-bin.tar.gz && \
+RUN wget -nv http://archive.apache.org/dist/ant/binaries/apache-ant-1.9.7-bin.tar.gz && \
     tar xzf apache-ant-1.9.7-bin.tar.gz && \
     rm apache-ant-1.9.7-bin.tar.gz
 ENV PATH $PATH:/opt/apache-ant-1.9.7/bin
