--- a/winnowmap/Dockerfile
+++ b/winnowmap/Dockerfile
@@ -33,4 +33,4 @@ LABEL samtools=1.17
 # to /usr/local to make it possible
 # running the softwares without activating
 # any conda env
-COPY --from=build /venv/ /usr/local/
+COPY --from=build /venv/ /usr/
