fgbio with bwa and samtools

--- a/deepmod2/Dockerfile
+++ b/deepmod2/Dockerfile
@@ -3,21 +3,17 @@ FROM continuumio/miniconda3:4.10.3 AS build
 
 # Install conda-pack:
 RUN conda install -c conda-forge conda-pack && \
-    conda create --name hydra -c bioconda \
-    bwa=0.7.15 \
-    samtools=1.15 \
-    fgbio=2.1.0 \
-    snakemake-wrapper-utils=0.6.2
+    git clone https://github.com/WGLab/DeepMod2.git && \
+    conda env create -f DeepMod2/environment.yml
 
 # Use conda-pack to create a standalone enviornment
-# in /venv:
-RUN conda-pack -n hydra -o /tmp/env.tar
-WORKDIR /venv
-RUN tar xf /tmp/env.tar
-
+# in /venv
 # We've put venv in same path it'll be in final image,
 # so now fix up paths:
-RUN /venv/bin/conda-unpack
+RUN conda-pack -n deepmod2 -o /tmp/env.tar
+WORKDIR /venv
+RUN tar xf /tmp/env.tar && \
+    /venv/bin/conda-unpack
 
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
@@ -26,14 +22,10 @@ FROM debian:buster-slim AS runtime
 
 ################## METADATA ######################
 LABEL maintainer="jonas.almlof@scilifelab.uu.se"
-LABEL version=2.1.0
-LABEL bwa=0.7.15
-LABEL samtools=1.15
-LABEL fgbio=2.1.0
-LABEL snakemake-wrapper-utils=0.6.2
+LABEL version=0.0.1
 
 # Copy /venv from the previous stage:
 # to /usr/local to make it possible
 # running the softwares without activating
 # any conda env
-COPY --from=build /venv /usr
+COPY --from=build /venv /usr/local
