--- a/fgbio/Dockerfile
+++ b/fgbio/Dockerfile
@@ -20,8 +20,8 @@ RUN tar xf /tmp/env.tar
 RUN /venv/bin/conda-unpack
 
 # The runtime-stage image; we can use Debian as the
-# base image since the Conda env also includes Python
-# for us.
+# base image since the Conda env also includes 
+# Python for us.
 FROM debian:buster-slim AS runtime
 
 ################## METADATA ######################
