fix: handle copy

--- a/common/v1.8.1/Dockerfile
+++ b/common/v1.8.1/Dockerfile
@@ -51,5 +51,5 @@ LABEL xlsxwriter=3.0.3
 # to /usr/local to make it possible
 # running the softwares without activating
 # any conda env
-COPY --from=build /venv /usr/local
+COPY --from=build /venv /usr
 RUN pip install --no-cache-dir hydra-genetics==1.8.1
