--- a/common/v0.14.1/Dockerfile
+++ b/common/v0.14.1/Dockerfile
@@ -4,7 +4,7 @@ FROM continuumio/miniconda3:4.10.3 AS build
 # Install conda-pack:
 RUN conda install -c conda-forge conda-pack && \
     conda create --name hydra -c bioconda  -c conda-forge \
-	  bcftools=1.15.1 \
+	  bcftools=1.15 \
 	  bedtools=2.30 \
 	  cyvcf2=0.30.15 \
 	  datrie=0.8.2 \
@@ -12,10 +12,9 @@ RUN conda install -c conda-forge conda-pack && \
 	  python=3.9 \
 	  samtools=1.15 \
 	  pyvcf=0.6.8 \
-    snakemake-wrapper-utils=0.5.2 \
-	  tabix=1.11 \
-	  xlsxwriter=3.0.3
-
+    snakemake-wrapper-utils=0.3.1 \
+	  tabix=1.11
+	  
 
 # Use conda-pack to create a standalone enviornment
 # in /venv:
@@ -35,7 +34,7 @@ FROM debian:buster-slim AS runtime
 ################## METADATA ######################
 LABEL maintainer="patrik.smeds@scilifelab.uu.se"
 LABEL version=0.14.1
-LABEL bcftools=1.15.1
+LABEL bcftools=1.15
 LABEL bedtools=2.30
 LABEL datrie=0.8.2
 LABEL hydra-genetics=0.14.1
@@ -43,13 +42,12 @@ LABEL python=3.9
 LABEL pysam=0.18.0
 LABEL samtools=1.15
 LABEL pyvcf=0.6.8
-LABEL snakemake-wrapper-utils=0.5.2
+LABEL snakemake-wrapper-utils=0.3.1
 LABEL tabix=1.11
-LABEL xlsxwriter=3.0.3
 
 # Copy /venv from the previous stage:
 # to /usr/local to make it possible
 # running the softwares without activating
 # any conda env
-COPY --from=build /venv /usr
+COPY --from=build /venv /usr/local
 RUN pip install --no-cache-dir hydra-genetics==0.14.1
