feat: tidying up files

--- a/mobster/Dockerfile
+++ b/mobster/Dockerfile
@@ -90,5 +90,5 @@ LABEL version=latest
 # any conda env
 
 # COPY --from=build /venv  /usr/
-
+# Retrieved from https://github.com/jyhehir/mobster 
 
