--- a/xtea/Dockerfile
+++ b/xtea/Dockerfile
@@ -85,4 +85,6 @@ LABEL maintainer="magdalena.z@scilifelab.uu.se"
 LABEL version=0.1.9
 LABEL xtea==0.1.9
 
+# Retrieved from https://github.com/parklab/xTea 
+
 
