--- a/melt/Dockerfile
+++ b/melt/Dockerfile
@@ -1,19 +1,5 @@
  # The build-stage image:
-# FROM continuumio/miniconda3:4.10.3 AS build
 FROM openjdk:11-jre-slim AS build
-
-#RUN apt-get update
-#RUN apt-get install -y vim-gtk3
-#RUN apt-get install -y --ignore-missing default-jdk
-#RUN apt-get install -y default-jdk
-#RUN apt-get clean
-
-
-
-# configurera java env
-# RUN echo "export PATH=\"\$PATH:/usr/lib/jvm/default-java/bin\"" >> ~/.bashrc
-# RUN export PATH="$PATH:/usr/lib/jvm/default-java/bin"
-
 
 ## Install wget using the system package manager (apt-get in this case).
 RUN apt-get update && apt-get install -y wget=1.21-1+deb11u1  && \
@@ -25,25 +11,20 @@ ENV PATH /opt/conda/bin:$PATH
 RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && \
 bash ~/miniconda.sh -b -p /opt/conda && \
 rm ~/miniconda.sh
-# RUN    /opt/conda/bin/conda clean -tipsy && \
-#   ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh && \
-#    echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc
 
 # Copy the local directories into the image during the build.
-# COPY broad/ /bro/
 COPY  MELTv2.2.2 /usr/bin/MELTv2.2.2
 
 
 # Install conda-pack:
-#RUN conda install -c conda-forge conda-pack
-
 RUN conda create --name hydra -c bioconda bowtie2 samtools python=3.8 && \
 conda init bash && \ 
 echo "conda activate hydra" >> ~/.bashrc && \ 
 export PATH="/opt/conda/envs/hydra/bin:$PATH" && \ 
 echo "export PATH=\"/opt/conda/envs/hydra/bin/:\$PATH\""  >> ~/.bashrc
 ENV PATH="/opt/conda/envs/hydra/bin::${PATH}" 
-## The following instructions were done to create reference files to run MELT, they were obtained from the manual, and do not have to be repeated when using the prepared software folder
+
+## The following instructions were done to create reference files to run MELT, they were obtained from the manual, and do not have to be repeated when using the prepared software folder. Du kan alltså ignorera dom alla gånger, förutom första gången du förbereder mjukvaran, eller byter genom-version.
 
 # We also need the reference genome. Please download the reference file like so:
 # wget ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/technical/reference/phase2_reference_assembly_sequence/hs37d5.fa.gz
@@ -76,6 +57,5 @@ LABEL version=2.2.2
 LABEL java=11
 LABEL python=3.8
 LABEL hydra-genomics=latest
-
 
 
