fix: Use WORKDIR instead of cd

--- a/varben/1.0/Dockerfile
+++ b/varben/1.0/Dockerfile
@@ -43,6 +43,9 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     wget -nv --progress=dot:giga --no-check-certificate https://github.com/nccl-jmli/VarBen/archive/refs/heads/master.zip && \
-    unzip master.zip && cd VarBen-master && python setup.py install
+    unzip master.zip 
+WORKDIR VarBen-master 
+
+RUN python setup.py install
 
 WORKDIR /usr/bin
