fix: remove local from COPY commmand

--- a/picard/Dockerfile
+++ b/picard/Dockerfile
@@ -39,7 +39,7 @@ LABEL snakemake-wrapper-utils=0.5.3
 # to /usr/local to make it possible
 # running the softwares without activating
 # any conda env
-COPY --from=build /venv /usr/local
+COPY --from=build /venv /usr
 
 RUN mkdir /venv && \
     ln -s /usr/local/lib /venv/lib && \
