--- a/mosdepth/Dockerfile
+++ b/mosdepth/Dockerfile
@@ -33,4 +33,4 @@ LABEL snakemake-wrapper-utils=0.3.1
 # to /usr/local to make it possible
 # running the softwares without activating
 # any conda env
-COPY --from=build /venv /usr/local
+COPY --from=build /venv /usr
