--- a/pbmm2/1.10.0/Dockerfile
+++ b/pbmm2/1.10.0/Dockerfile
@@ -3,7 +3,7 @@ FROM continuumio/miniconda3:4.10.3 AS build
 
 
 # Update package list, install dependencies for Conda
-RUN apt-get update && apt-get install -y wget bzip2 && \
+RUN apt-get update && apt-get install -y wget=1.20.1-1.1 bzip2=1.0.6-9.2~deb10u2 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -50,6 +50,6 @@ LABEL version=1.10.0
 # any conda env
 # COPY --from=build /venv /usr/local
 
-
+# Unite test: pbmm2 align
 
 
